# mediabuddy

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: MEDIA_BUDDY_MANUAL.md  PDF_EXPORT.md  RELEASE_NOTES_0.1.0.md
docs/screenshots/: README.md
docs/wiki/: AI-Vision-Florence-2.md  API-Keys.md  Getting-Started.md  Home.md  Installation-and-Portable-Mode.md  Library-and-Downloads.md  REST-API.md  Release-Checklist.md  Screenshot-Checklist.md  Screenshots.md  Search-and-Topics.md  Settings-and-Data.md  Troubleshooting.md  _Sidebar.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: api_keys.rs  api_server.rs  config.rs  db.rs  downloader.rs  error.rs  image_manager.rs  lib.rs  logbuf.rs  main.rs  paths.rs  quota.rs  search.rs  system_monitor.rs  topics.rs  types.rs  urlguard.rs
src-tauri/src/vision/: download.rs  hardware.rs  inference.rs  integrity.rs  mod.rs  preprocess.rs  runtime.rs
src/components/: LibraryThumb.tsx  SystemFooter.css  SystemFooter.tsx  Tabs.css  Tabs.tsx
src/lib/: api.ts  thumbCache.ts
src/styles/: theme.css
src/tabs/: APITab.css  APITab.tsx  ImagesTab.css  ImagesTab.tsx  LogTab.css  LogTab.tsx  SettingsTab.css  SettingsTab.tsx
